--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         class="action-button esri-icon-polyline"
         id="distanceButton"
         type="button"
-        title="Measure distance between two or more points"
+        title="Service Lateral Renewal Cost"
       ></button>
       <!-- <button
         class="action-button esri-icon-documentation"
