--- a/index.html
+++ b/index.html
@@ -6,53 +6,9 @@
       content="initial-scale=1,maximum-scale=1,user-scalable=no"
     />
     
-    <title>Measurement in 2D - 4.11</title>
+    <title>Service Lateral Renewal Cost</title>
 
-    <style>
-      html,
-      body,
-      #viewDiv {
-        padding: 0;
-        margin: 0;
-        height: 100%;
-        width: 100%;
-      }
-
-      #topbar {
-        background: #fff;
-        padding: 10px;
-      }
-
-      .action-button {
-        font-size: 16px;
-        background-color: transparent;
-        border: 1px solid #d3d3d3;
-        color: #6e6e6e;
-        height: 32px;
-        width: 32px;
-        text-align: center;
-        box-shadow: 0 0 1px rgba(0, 0, 0, 0.3);
-      }
-
-      .action-button:hover,
-      .action-button:focus {
-        background: #0079c1;
-        color: #e4e4e4;
-      }
-
-      .active {
-        background: #0079c1;
-        color: #e4e4e4;
-      }
-
-      .info {
-        background: #fff;
-        height: 100 px;
-        width: 260px;
-        padding: 10px;
-        box-shadow: 0 0 1px rgba(0, 0, 0, 0.3);
-      }
-    </style>
+    <link rel="stylesheet" href="index.css" />
 
     <link
       rel="stylesheet"
