--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       content="initial-scale=1,maximum-scale=1,user-scalable=no"
     />
     
-    <title>Service Lateral Renewal Cost - Halifax</title>
+    <title>Service Lateral Renewal Cost</title>
 
     <link rel="stylesheet" href="index.css" />
 
