--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       content="initial-scale=1,maximum-scale=1,user-scalable=no"
     />
     
-    <title>Service Lateral Renewal Cost - </title>
+    <title>Service Lateral Renewal Cost</title>
 
     <link rel="stylesheet" href="index.css" />
 
@@ -34,13 +34,6 @@
         type="button"
         title="Service Lateral Renewal Cost"
       ></button>
-      <!-- <button
-        class="action-button esri-icon-documentation"
-        id="costButton"
-        type="button"
-        title="Calculate cost of LSLR"
-        disabled
-      ></button> -->
       <div 
         class="info"
         id="info"
@@ -82,11 +75,6 @@
             <input type="checkbox" id = "stone" unchecked></input>
             <label>Stone</label> <br>
         </div>
-        <!-- <br> -->
-        <!-- <label>Length of service lateral under asphalt</label>
-        <input type="number" id = "userinput" unchecked></input>
-        <label>meters</label><br> -->
-
         <button id = "calculate">Calculate</button>
         <hr>
         <label>Cost: </label> <span>CAD</span> 
