added refresh button. changed intro description

--- a/index.html
+++ b/index.html
@@ -34,13 +34,23 @@
         type="button"
         title="Service Lateral Renewal Cost"
       ></button>
+      <button
+        class="action-button esri-icon-refresh"
+        id="refresh"
+        type="button"
+        title="Refresh"
+      ></button>
       <div 
         class="info"
         id="info"
       >
         <strong>Service Lateral Renewal Cost </strong>
         <br>
-        To know the length of your service lateral, draw a line from your house to the potential location of the your curb stop by selecting two points (one point in your house and double click for another point for your curb stop) <a href = "https://dalu-my.sharepoint.com/:b:/g/personal/sh659141_dal_ca/EeHlsImTZMhFjbj_AIPc90wBMQBiM8inxKR8oBRoOo4UVQ?e=36IYCP" target = "_blank" >How to know the location of your curb stop </a>
+        Steps: <br>
+        <p>1. Select <span><i class = "esri-icon-search"></i></span> above and search the location of your house </p>
+        <p>2. After the map zooms in to the location of your house, select <span><i class = "esri-icon-polyline"></i></span>and draw a line from your house to the potential location of your curb stop. <br>(draw by clicking once at the point in your house and double clicking to end the measurement). </p>
+        <p>3. Press <span><i class = "esri-icon-refresh"></i></span> if you'd like to measure again.</p>
+        <p><span><i class = "esri-icon-question"></i></span><a href = "https://dalu-my.sharepoint.com/:b:/g/personal/sh659141_dal_ca/EeHlsImTZMhFjbj_AIPc90wBMQBiM8inxKR8oBRoOo4UVQ?e=36IYCP" target = "_blank" > How to know the location of your curb stop </a></p>
       </div>
       <div 
         class="info"
