--- a/index.html
+++ b/index.html
@@ -43,19 +43,20 @@
       <div 
         class="info"
         id="info"
+        style = "display:block;"
       >
         <strong>Service Lateral Renewal Cost </strong>
         <br>
         Steps: <br>
         <p>1. Select <span><i class = "esri-icon-search"></i></span> above and search the location of your house </p>
-        <p>2. After the map zooms in to the location of your house, select <span><i class = "esri-icon-polyline"></i></span>and draw a line from your house to the potential location of your curb stop. <br>(draw by clicking once at the point in your house and double clicking to end the measurement). </p>
+        <p>2. Select <span><i class = "esri-icon-polyline"></i></span>and draw a line from your house to the potential location of your curb stop. (Click once to start measurement, double click to end). </p>
         <p>3. Press <span><i class = "esri-icon-refresh"></i></span> if you'd like to measure again.</p>
         <p><span><i class = "esri-icon-question"></i></span><a href = "https://dalu-my.sharepoint.com/:b:/g/personal/sh659141_dal_ca/EeHlsImTZMhFjbj_AIPc90wBMQBiM8inxKR8oBRoOo4UVQ?e=36IYCP" target = "_blank" > How to know the location of your curb stop </a></p>
       </div>
       <div 
         class="info"
         id="costcalculation"
-        style="display:none;"
+        style="display:none; overflow-y: auto; height: 14em;"
       >
         <label>Length: </label>
         <input type = "text" id = "length" style="width: 100px;" disabled></input> <br> <hr>
