add parcel layer and button to view/hide lead boundary layer

--- a/index.html
+++ b/index.html
@@ -40,6 +40,18 @@
         type="button"
         title="Refresh"
       ></button>
+      <button
+        class="action-button esri-icon-radio-checked"
+        id="viewButton"
+        type="button"
+        title="view"
+      ></button>
+      <button
+        class="action-button esri-icon-radio-unchecked"
+        id="hideButton"
+        type="button"
+        title="hide"
+      ></button>
       <div 
         class="info"
         id="info"
