add radio buttons in driveway

--- a/index.html
+++ b/index.html
@@ -102,15 +102,15 @@
         <label>Driveway</label> <br>
 
         <div id = "more" style = "margin-left:0.5cm;display:none">
-            <input type="checkbox" id = "asphalt" unchecked></input>
+            <input type="radio" name = "driveway" id = "asphalt" unchecked>
             <label>Asphalt</label> <br>
-            <input type="checkbox" id = "gravel" unchecked></input>
+            <input type="radio" id = "gravel" name = "driveway" unchecked>
             <label>Gravel</label> <br>
-            <input type="checkbox" id = "exposedaggregate" unchecked></input>
+            <input type="radio" id = "exposedaggregate" name = "driveway" unchecked>
             <label>Exposed Aggregate</label> <br>
-            <input type="checkbox" id = "concrete" unchecked></input>
+            <input type="radio" id = "concrete" name = "driveway" unchecked>
             <label>Concrete</label> <br>
-            <input type="checkbox" id = "stone" unchecked></input>
+            <input type="radio" id = "stone" name = "driveway" unchecked>
             <label>Stone</label> <br>
         </div>
         <button id = "calculate">Calculate</button>
